--- a/test.html
+++ b/test.html
@@ -1,8 +1,40 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<script
-			type="application/javascript"
-			src="./pyp.deploy.js">
-		</script>
+		<title>pyp unit test</title>
+
+		<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.3.2.css">
+
+		<script type="application/javascript" src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
+
+		<script type="application/javascript" src="./pyp.deploy.js"></script>
 	</head>
+
+	<body>
+		<div id="qunit"></div>
+
+		<div id="qunit-fixture"></div>
+
+		<script type="application/javascript">
+			QUnit.test( "pyp unit test", function( assert ) {
+
+				assert.equal( pyp( [ 1, 2, 3, "hello" ], STRING ), "hello", "should return 'hello'" );
+
+				assert.equal( pyp( [ 1, 2, 3 ], 2 ), 2, "should be equal" );
+
+				assert.equal( pyp( [ 1, 2, 3 ], NUMBER ), 1, "should be equal" );
+
+				assert.deepEqual( pyp( [ { }, 1, 2, 3, { "hello": "world" } ], OBJECT ), { }, "should return empty object" );
+
+				let date = new Date( );
+				assert.equal( pyp( [ true, date, { }, "hello" ], Date ), date, "should be equal" );
+
+				assert.equal( pyp( [ true, date, { }, "hello" ], "Date" ), date, "should be equal" );
+
+				let hello = function hello( ){ return "hello" };
+				assert.deepEqual( pyp( [ 1, 2, 3, { }, hello ], FUNCTION ), hello, "should be equal" );
+
+			} );
+		</script>
+	</body>
 </html>
