--- a/test.html
+++ b/test.html
@@ -27,9 +27,7 @@
 				assert.deepEqual( pyp( [ { }, 1, 2, 3, { "hello": "world" } ], OBJECT ), { }, "should be equal to empty object" );
 
 				let date = new Date( );
-				assert.equal( pyp( [ true, date, { }, "hello" ], Date ), date, "should be equal to new Date( ) value" );
-
-				assert.equal( pyp( [ true, date, { }, "hello" ], "Date" ), date, "should be equal to new Date( ) value" );
+				assert.equal( pyp( [ true, date, { }, "hello" ], date ), date, "should be equal the give condition which is new Date( ) value" );
 
 				let hello = function hello( ){ return "hello" };
 				assert.deepEqual( pyp( [ 1, 2, 3, { }, hello ], FUNCTION ),
